[project]
name = "mc-seed-search"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "sympy>=1.14.0",
    "pygame>=2.6.1",
    "numba>=0.62.1",
]

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
sympy = "^1.14.0"
pygame = "^2.6.1"
numba = "^0.62.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.uv]
package = false